[metadata]
name = plover_better_rtf
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev8
  rtfcre>=0.1.0
py_modules =
	better_rtf

[options.entry_points]
plover.dictionary =
  ; 'rtf' is currently taken by the built-in RTF/CRE dictionary :(
  rtfcre = better_rtf:RtfDictionary
