[metadata]
name = plover_better_rtf
version = 1.0.0
description = Plover plugin for better RTF handling
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/sammdot/plover-better-rtf
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev8
  rtfcre>=1.2.2
py_modules =
  better_rtf

[options.entry_points]
plover.dictionary =
  ; 'rtf' is currently taken by the built-in RTF/CRE dictionary :(
  rtfcre = better_rtf:RtfDictionary
